# event_driven_ml_demo

./: Dockerfile  README.md  download_run_kafka.sh  download_run_knative.sh  pyproject.toml  scratch.ipynb  streamlit_app.py
data_producer/: data_producer.py
kafka_kubernetes/: kafka.yaml  zookeeper.yaml
online_learner_app/: app.py  deployment.yaml  fastapi_app.py  model_training.py
online_learner_app/data_consumer/: data_consumer.py
online_learner_app/data_producer/: data_producer.py
temp_files/: dataset.csv  metric.pkl  model.pkl
